--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -9,10 +9,10 @@
     text-decoration: none;
     font-family: 'Raleway', sans-serif;
     background-color: #f4bb4e;
-    margin: 10px;
+    margin: 10px 10px 30px;
     padding: 10px;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     border-radius: 5px;
     transition: all 0.2s ease-in-out;
@@ -184,7 +184,6 @@
     background-repeat: repeat;
     background-size: contain;
     min-height: 100vh;
-
 }
 .products__wrapper{
     margin: 0 30px;
@@ -298,4 +297,36 @@
     font-weight: 700;
     background-color: white;
     width: 150px;
+}
+//about
+.app__about{
+    background-image: url('../images/background.jpg');
+    background-position: center;
+    background-repeat: repeat;
+    background-size: contain;
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.about__img{
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+}
+.about__title{
+    text-transform: capitalize;
+    margin: 20px;
+    font-family: 'Caveat Brush', cursive; 
+    font-size: 36px;
+    border-top: solid 1px black; 
+    border-bottom: solid 1px black; 
+    background-color: white;
+}
+.about__description{
+    font-family: 'Raleway', sans-serif;
+    text-align: center;
+    background-color: white;
+    padding: 10px;
 }
